# RetroAGI

./: .gitattributes  .gitignore  ARTIFACTS.md  Dockerfile  GEMINI.md  LICENSE  PROMPT.md  README.md  TODO.md  build.sh  compose.yaml  pyproject.toml  requirements.txt  run.py  run.sh
.claude/: launch.json
.github/workflows/: ci.yml
artifacts/fresh_block_smb_20260704_005140/: ANALYSIS.md  block_smb_distill_log.jsonl  block_smb_distill_stdout.json  block_smb_distill_summary.json
artifacts/full_pipeline_20260626_1450/: RUN_SUMMARY.md
artifacts/full_smb/: p3a_env_check.json  recording_manifest.npz
data/block_smb/: cuda_start_20260626_1447_policy.json  cuda_start_20260626_1447_policy.pth  policy_distilled_dagger_20260718.json  policy_distilled_dagger_20260718.pth
data/block_vit/: block_vit.json  block_vit.pth
data/vit/: full_smb_vit.pth  val.npz  vit_smb.pth
docker/: compose.yaml  entrypoint.sh  run.sh
docs/: ai-teaching-curriculum.md  architecture.html  block-smb-monte-carlo-curriculum.md  block-smb-success-thresholds.md  compatibility.md  fresh-training-full-smb-20260703-obstacle-window-run.md  fresh-training-full-smb-20260703-parameterized-primitives.md  fresh-training-full-smb-20260703.md  full-smb-content.md  full-smb-save-states.md  full-smb-success-thresholds.md  full-smb-tasks.md  issues.md  operations.md  reproducibility.md  smb-policy-architecture-analysis.md  stage-semantics.md  tensor-contracts.md  universal-retro-oracle.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
models/segmentation/: MarioSegmentationModel.pth
notebooks/: MarioRL.ipynb  SemanticModel_training_and_testing.ipynb  SuperMarioRL.ipynb  Toy_Example.ipynb  features.ipynb  mario.ipynb  mario_rl_tutorial.ipynb  semanticsegmentation.ipynb
notebooks/behavior/: README.md  behavior.ipynb  behaviors.py
notebooks/ctm/: 01_mnist.ipynb
notebooks/features/: clustering.ipynb
notebooks/motifs/: Algorithm Comparison.ipynb  Anomalies_Matrix_Profile_Discords.ipynb  Matrix_Profile_Tutorial.ipynb  Motif Discovery.ipynb  Tutorial_STUMPY_Basics.ipynb  Tutorial_Semantic_Segmentation.ipynb  motifs.ipynb
notebooks/reinforcement/: README.md
notebooks/segmentation/: README.md  SemanticModel_training_and_testing.ipynb  segment_inference.py  segment_training.py  segmentation.ipynb
notebooks/transformer/: README.md  fibonacci_transformer.ipynb  language_modeling_from_scratch.ipynb  preprocessing.ipynb  quicktour.ipynb  task_summary.ipynb  text_classification.ipynb  token_classification.ipynb  tokenizer_summary.ipynb  tokenizer_training.ipynb  training.ipynb  transformer.ipynb
retro_examples/: brute.py  ppo.py
retroagi/: __init__.py  cli.py  experiments.py  promotion.py  reports.py
retroagi/core/: __init__.py  ablations.py  action_stats.py  actions.py  architectures.py  backends.py  checkpoint.py  compatibility.py  config.py  devices.py  game_plugins.py  game_promotion.py  games.py  hierarchy.py  interfaces.py  models.py  multi_seed.py  perception.py  rewards.py  signals.py  stage_resolution.py  synthetic.py  tasks.py  tracking.py  vision.py
retroagi/stages/: __init__.py
roms/: SuperMarioBros.nes  SuperMarioBros2.nes  SuperMarioBros3.nes
scripts/: behavior_config.yaml  behaviors.py  bootstrap_perception.py  generate_data.py  lstm_demo.py  main.py  mario_scenario_env.py  motifs.py  nTreeClus.py  perceptive_field.py  run.py  segment_inference.py  semantic_segmentation.py  simple_transformer.py  simple_transformer_experiment.py  train.py  transformer.py
scripts/GenAI/: prd.txt
scripts/examples/: tokenization.py
scripts/retro_examples/: nTreeClus.py
scripts/scenarios/: level_3_stairs.json
scripts/segmentation/: segment_inference.py  segment_training.py
scripts/tests/: test_action_stats.py  test_actions.py  test_architecture_ablations.py  test_architectures.py  test_backends.py  test_block_smb_action_diagnostics.py  test_block_smb_action_semantics.py  test_block_smb_cli.py  test_block_smb_distill.py  test_block_smb_geometry_expert.py  test_block_smb_monte_carlo.py  test_block_smb_overfit_gate.py  test_block_smb_physics.py  test_block_smb_scripted_policy.py  test_block_smb_success.py  test_block_smb_training.py  test_checkpoint.py  test_ci_workflow.py  test_compatibility.py  test_config.py  test_contracts.py  test_core_models.py  test_dependencies.py  test_devices.py  test_docs.py  test_experiments.py  test_full_smb_action_diagnostics.py  test_full_smb_adapter.py  test_full_smb_architecture_benchmark.py  test_full_smb_artifacts.py  test_full_smb_benchmark.py  test_full_smb_capabilities.py  test_full_smb_cpu_smoke.py  test_full_smb_curriculum_gates.py  test_full_smb_diagnostics.py  test_full_smb_imitation.py  test_full_smb_local_integration.py  test_full_smb_policy_contracts.py  test_full_smb_save_states.py  test_full_smb_success.py  (+16 more)
scripts/vit/: README.md  extract_sprites.py  generate_dataset.py  train_block_vit.py  train_vit.py
src/: main.py  models.py  prefrontal.py  supervisor.py
tests/: test_bootstrap_perception.py  test_hippocampus.py  test_motor.py  test_occipital.py  test_prefrontal.py  test_temporal.py
(+248 files in other folders)
