[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "retroagi"
version = "0.1.0"
description = "Hierarchical actor-world-model-critic research for retro games"
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy==2.3.2",
    "pygame==2.6.1",
    "stable-retro==1.0.0",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-timeout==2.4.0",
]
format = [
    "black==26.5.1",
]
lint = [
    "ruff==0.15.17",
]
vision = [
    "matplotlib==3.10.5",
    "opencv-python==4.13.0.92",
    "pillow==11.3.0",
    "scipy==1.16.3",
]
dev = [
    "black==26.5.1",
    "pytest==9.0.3",
    "pytest-timeout==2.4.0",
    "ruff==0.15.17",
]

[tool.setuptools.packages.find]
include = ["retroagi*"]

[tool.setuptools.package-data]
"retroagi.stages.block_smb" = ["scenarios/*.json"]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers", "--timeout=60"]
testpaths = ["scripts/tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
/(
    notebooks
  | scripts/segmentation/segment_training\.py
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "notebooks",
    "scripts/segmentation/segment_training.py",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]
ignore = [
    "F403",
    "F405",
]

[tool.ruff.lint.per-file-ignores]
"scripts/segmentation/segment_inference.py" = ["F401"]
"scripts/semantic_segmentation.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["retroagi"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
