[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "retroagi"
version = "0.1.0"
description = "Hierarchical actor-world-model-critic research for retro games"
readme = "README.md"
requires-python = ">=3.12,<3.15"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy==2.3.2",
    "pygame-ce==2.5.7",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
full-smb = [
    "stable-retro==1.0.0; python_version < '3.13'",
    "stable-retro @ git+https://github.com/Farama-Foundation/stable-retro.git@778186c71e003f7c8a5682187832ba430b8e34b3 ; python_version >= '3.13'",
]
test = [
    "pytest==9.0.3",
    "pytest-timeout==2.4.0",
]
format = [
    "black==26.5.1",
]
lint = [
    "ruff==0.15.17",
]
vision = [
    "matplotlib==3.10.5",
    "opencv-python==4.13.0.92",
    "pillow==11.3.0",
    "scipy==1.16.3",
]
tracking = [
    "tensorboard>=2.20,<3",
    "wandb>=0.22,<1",
]
dev = [
    "black==26.5.1",
    "pytest==9.0.3",
    "pytest-timeout==2.4.0",
    "ruff==0.15.17",
]

[project.scripts]
retroagi = "retroagi.cli:main"
retroagi-block-smb = "retroagi.stages.block_smb.cli:main"
retroagi-block-smb-distill = "retroagi.stages.block_smb.distill:main"

[tool.setuptools.packages.find]
include = ["retroagi*"]

[tool.setuptools.package-data]
"retroagi.stages.block_smb" = ["scenarios/*.json"]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers", "--timeout=60"]
testpaths = ["scripts/tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py312"]
# CI formats changed files by explicit path; force-exclude keeps the excludes
# effective for explicitly-passed files too.
force-exclude = '''
/(
    notebooks
  | scripts/segmentation/segment_training\.py
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
# CI lints changed files by explicit path; force-exclude keeps the excludes
# effective for explicitly-passed files too.
force-exclude = true
extend-exclude = [
    "notebooks",
    "scripts/segmentation/segment_training.py",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]
ignore = [
    "F403",
    "F405",
]

[tool.ruff.lint.per-file-ignores]
# E402: these scripts insert the project root into sys.path before importing
# retroagi, so their imports legitimately follow module-level code.
"scripts/mario_scenario_env.py" = ["E402"]
"scripts/run.py" = ["E402"]
"scripts/segmentation/segment_inference.py" = ["F401", "E402"]
"scripts/semantic_segmentation.py" = ["E402"]
"scripts/simple_transformer.py" = ["E402"]
"scripts/vit/train_block_vit.py" = ["E402"]
"scripts/vit/train_vit.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["retroagi"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
